# hpcd

./: .gitignore  README  configure  configure.ac  make.config  make.config.in  makefile
examples/: makefile
examples/mpi/: example_01.d  example_02.d  makefile
examples/petsc/: ex1.d  makefile  petsc.config
examples/petsc/mat/: ex1.d  makefile
examples/petsc/sys/: ex1.d  ex2.d  ex3.d  ex4.d  makefile
examples/petsc/vec/: ex1.d  ex2.d  makefile
mpi/: example_01.d  makefile  mpi.d  mpi_test.d  mpiwrap.c
petsc/: README  error.d  ksp.d  log.d  makefile  mat.d  sys.d  types.d  vec.d
petsc/c/: IS.d  log.d  makefile  mat.d  options.d  sys.d  types.d  vec.d  viewer.d
petsc/examples/: ex1.d  makefile
